# LeaderboardAgentWitty

./: README.md  SP500symbols.csv  pyproject.toml  scenario.toml  test_cases.json
results/: 20260115T195843Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T200508Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T201317Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T203044Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T203540Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T204211Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T212701Z_ghcr-io-wczubal1-purpleagentwitty-latest.json  20260115T215240Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260115T221049Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260115T222612Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260116T023546Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260116T024540Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260116T031713Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260116T032837Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260119T201734Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260119T203444Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260129T031310Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260130T215556Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260130T220907Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260130T222127Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260130T231220Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260130T233443Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  20260131T185919Z_019bc3a1-4bc7-7682-bc2a-9ce12d09865e.json  (+1 more)
(+5 files in other folders)
